<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFIDmanager</string>
    <string name="action_settings">Settings</string>
    <string name="btn_connect">Open</string>
    <string name="btn_disconnect">Close</string>
    <string name="btn_findDevice">Search</string>
    <string name="btn_stopFindDevice">Stop</string>
    <string name="btn_getDevInfo">Information</string>
    <string name="tv_commType">Connector:</string>
    <string name="sn_commPrompt">Please select a connector</string>
    <string name="tv_blueName">Bluetooth:</string>
    <string name="tv_ipAddr">IP:</string>
    <string name="tv_port">Port:</string>
    <string name="btn_setTime">Set Time</string>
    <string name="tv_devType">Device:</string>
    <string name="tv_devTypePrompt">Please select a device.</string>
    <string name="tv_comPath">COM:</string>
    <string name="btn_closeRF">Close RF</string>
    <string name="btn_openRF">Open RF</string>
    <string name="btn_startInventory">Start</string>
    <string name="btn_stopInventory">Stop</string>
    <string name="btn_paraInventory">Parameter</string>
    <string name="btn_startScanRecord">Start</string>
    <string name="btn_stopScanRecord">Stop</string>
    <string name="ed_defaultIp">192.168.1.87</string>
    <string name="ed_defaultPort">4800</string>
    <string name="tv_uid">UID</string>
    <string name="tv_protocol">Protocol</string>
    <string name="tv_tagType">Type</string>
    <string name="tv_inventoryCnt">Count</string>
    <string name="tv_scanfCnt">Court</string>
    <string name="btn_clearList">Clear</string>
    <string name="tv_scanfData">Data</string>
    <string name="tv_inventoryInfo">Tag:0;Failed:0</string>
    <string name="tv_scanRecordInfo">Record:0</string>
    <string name="btn_clearScanList">Clear</string>
    <string name="tv_rfPower">Power:</string>
    <string name="btn_setPower">Set</string>
    <string name="btn_readPower">Read</string>
    <string name="tv_protocolName">"   ISO15693 Tag"</string>
    <string name="btn_loadDefault">Load Default</string>
    <string name="check_useDefault">Default protocol</string>
    <string name="check_onlyReadNew">Only read new tag</string>
    <string name="check_matchAFI">Math AFI</string>
    <string name="tv_afiVal">"AFI(hex):"</string>
    <string name="ed_defaultAfi">00</string>
    <string name="btn_inventorySetCancel">Cancel</string>
    <string name="btn_inventorySetOk">Set </string>
    <string name="tv_iso15693ProtocolSet">ISO15693 Protocol:</string>
    <string name="btn_icodesli_inventory">Inventory</string>
    <string name="tv_icodesli_connectmode">Mode:</string>
    <string name="btn_icodesli_connect">Connect</string>
    <string name="btn_icodesli_disconnect">Disconnect</string>
    <string name="tv_icodesli_uid">UID:</string>
    <string name="tv_icodesli_addr">Addr:</string>
    <string name="tv_icodesli_blkNum">Num:</string>
    <string name="tv_icodesli_dlkData">Data:</string>
    <string name="btn_icodesli_read">Read</string>
    <string name="btn_icodesli_write">Write</string>
    <string name="btn_icodesli_lock">Lock</string>
    <string name="tv_icodesli_dsfid">DSFID:</string>
    <string name="ed_icodesli_dsfid">00</string>
    <string name="btn_setDsfid">Write</string>
    <string name="btn_lockDsfid">Lock</string>
    <string name="tv_icodesli_afi">"AFI:"</string>
    <string name="ed_icodesli_afi">00</string>
    <string name="btn_setAFI">Write</string>
    <string name="btn_lockAFI">Lock</string>
    <string name="btn_icodesli_tagInfo">Info</string>
    <string name="btn_icodesli_enEAS">Enable EAS</string>
    <string name="btn_icodesli_disEnEAS">Disable EAS</string>
    <string name="btn_icodesli_checkEAS">Check EAS</string>
    <string name="btn_icodesli_return">Back</string>
    <string name="btn_icodesli_lockEas">Lock EAS</string>
    <string name="tagListimage">arrow</string>
    <string name="check_buzzer">Buzzer when read</string>
    <string name="tv_overflow_time">Overflow:</string>
    <string name="btn_read_overflow_time">Read</string>
    <string name="btn_write_overflow_time">Write</string>
    <string name="tx_bluetooth">Bluetooth</string>
    <string name="tx_select_device">Select device</string>
    <string name="tx_select_bluetooth">Please select the bluetooth</string>
    <string name="tx_tab_device">DEVICE</string>
    <string name="tx_tab_command">CMD</string>
    <string name="tx_tab_inventory">TAG</string>
    <string name="tx_tab_operate">R/W</string>
    <string name="tx_tab_scanf">SCANF</string>
    <string name="tx_openRF_ok">Open RF successfully.</string>
    <string name="tx_openRF_fail">Failed to open RF.</string>
    <string name="tx_openRF">Open RF</string>
    <string name="tx_setPower_ok">Set RF power successfully.</string>
    <string name="tx_setPower_fail">Failed to set the RF power.</string>
    <string name="tx_setPower">Set RF Power</string>
    <string name="tx_loadDefault_ok">Load default successfully.</string>
    <string name="tx_loadDefault_fail">Failed to load default.</string>
    <string name="tx_loadDefault">Load default</string>
    <string name="tx_getRFPower">Get RF Power</string>
    <string name="tx_getRFPower_ok">Get RF power successfully.</string>
    <string name="tx_getRFPower_fail">Failed to get RF power.Err=</string>
    <string name="tx_CloseRF">Close RF</string>
    <string name="tx_CloseRF_ok">Close RF successfully.</string>
    <string name="tx_CloseRF_fail">Failed to close RF.</string>
    <string name="tx_inventory_sum0">Tag:0; Failed:0</string>
    <string name="tx_scanf_sum0">Count:0</string>
    <string name="tx_getOverflowTime">Overflow Time</string>
    <string name="tx_getOverflowTime_ok">Get overflow time successfully.</string>
    <string name="tx_getOverflowTime_fail">Failed to get overflow time.err=</string>
    <string name="tx_setOverflowTime">overflow time</string>
    <string name="tx_setOverflowTime_ok">Set overflow time successfully.</string>
    <string name="tx_setOverflowTime_fail">Failed to set the overflow time.err=</string>
    <string name="tx_msg_certain">OK</string>
    <string name="tx_type_com">COM</string>
    <string name="tx_type_bluetooth">Bluetooth</string>
    <string name="tx_type_net">NET</string>
    <string name="tx_msg_selectCom">Select COM</string>
    <string name="tx_msg_selectComTip">Please select the COM first.</string>
    <string name="tx_msg_noUsb">No USB device.</string>
    <string name="tx_msg_noUsbPermission">No USB Permission.</string>
    <string name="tx_msg_openDev_ok">Open the device successfully.</string>
    <string name="tx_msg_openDev_fail">Failed to open the device.</string>
    <string name="tx_msg_stopInventory_tip">Please stop inventory.</string>
    <string name="tx_msg_stopScanf_tip">Please stop scanf the record.</string>
    <string name="tx_msg_getDevInfo">Get device information.</string>
    <string name="tx_msg_getDevInfo_fail">Failed to get device information.err=</string>
    <string name="tx_msg_setTime">Set time</string>
    <string name="tx_msg_setTime_fail">Failed to set time.err=</string>
    <string name="tx_msg_setTime_ok">Set time successfully.</string>
    <string name="tx_info_tagCnt">Tag:</string>
    <string name="tx_info_failCnt">; Failed:</string>
    <string name="tx_info_scanfCnt">Count:</string>
    <string name="tx_msg_inputHexAFI">Please input the AFI(Hex).</string>
    <string name="tx_msg_uidNoNull">UID can not be null.</string>
    <string name="tx_msg_operate_fail">Failed to operate the tag.</string>
    <string name="tx_msg_getTagInfo_fail">Failed to get the information of the tag.err=</string>
    <string name="tx_msg_readBlk_fail">Failed to read the block.err=</string>
    <string name="tx_msg_inputHexString">Please enter a hexadecimal string.</string>
    <string name="tx_msg_dataLenErr">Data length is incorrect!</string>
    <string name="tx_msg_paraErr">Parameter is incorrect.</string>
    <string name="tx_msg_writeBlk_ok">Write the block successfully.</string>
    <string name="tx_msg_writeBlk_fail">Failed to write the block.err=</string>
    <string name="tx_msg_lockBlk_ok">Lock the block successfully.</string>
    <string name="tx_msg_lockBlk_fail">Failed to lock the block.err=</string>
    <string name="tx_msg_inputDsfid">Please input the DSFID value.</string>
    <string name="tx_msg_setDsfid_ok">Set the DSFID successfully.</string>
    <string name="tx_msg_setDsfid_fail">Failed to set the DSFID.err=</string>
    <string name="tx_msg_inputAFI">Please input the AFI.</string>
    <string name="tx_msg_setAfi_ok">Set the AFI successfully.</string>
    <string name="tx_msg_setAfi_fail">Failed to set the AFI.err=</string>
    <string name="tx_msg_lockDsfid_ok">Lock DSFID successfully.</string>
    <string name="tx_msg_lockDsfid_fail">Failed to lock the DSFID.err=</string>
    <string name="tx_msg_enEAS_fail">Failed to enable the EAS.err=</string>
    <string name="tx_msg_enEAS_ok">Enable the EAS successfully.</string>
    <string name="tx_msg_disEAS_fail">Failed to disable the EAS.err=</string>
    <string name="tx_msg_disEAS_ok">Disable the EAS successfully.</string>
    <string name="tx_msg_lockEAS_fail">Failed to lock the EAS.err=</string>
    <string name="tx_msg_lockEAS_ok">Lock EAS successfully.</string>
    <string name="tx_msg_lockAFI_fail">Failed to lock AFI.err=</string>
    <string name="tx_msg_lockAFI_ok">Lock AFI successfully.</string>
    <string name="tx_msg_checkEAS_fail">Failed to check EAS.err=</string>
    <string name="tx_msg_EasClosed">EAS closed</string>
    <string name="tx_msg_EasOpen">EAS open</string>

</resources>