<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="50dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/check_buzzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="@string/check_buzzer" />

    <CheckBox
        android:id="@+id/check_onlyReadNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_onlyReadNew" />

    <CheckBox
        android:id="@+id/check_useDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_useDefault" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_iso15693ProtocolSet" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_matchAFI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_matchAFI" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_afiVal" />

        <EditText
            android:id="@+id/ed_afiVal"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:inputType="text"
            android:text="@string/ed_defaultAfi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_inventorySetCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_inventorySetCancel" />

        <Button
            android:id="@+id/btn_inventorySetOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_inventorySetOk" />
    </LinearLayout>

</LinearLayout>