<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_command"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/tv_rfPower"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sn_powerVal"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:entries="@array/powerVal" />

        <Button
            android:id="@+id/btn_readPower"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_readPower"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_setPower"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_setPower"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/tv_overflow_time"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sn_overflow_time"
            android:layout_width="90dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_read_overflow_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_read_overflow_time"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_write_overflow_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_write_overflow_time"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_getDevInfo"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_getDevInfo"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_setTime"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_setTime"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_openRF"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_openRF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_closeRF"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_closeRF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_loadDefault"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_loadDefault"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>