<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_reader"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0">

        <TextView
            android:id="@+id/tv_devType"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_devType" />

        <Spinner
            android:id="@+id/sn_devType"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/tv_devType"
            android:entries="@array/devType"
            android:prompt="@string/tv_devTypePrompt" />

        <TextView
            android:id="@+id/tv_commType"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/tv_devType"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_commType" />

        <Spinner
            android:id="@+id/sn_commType"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@id/tv_commType"
            android:layout_toRightOf="@id/tv_commType"
            android:entries="@array/commType"
            android:prompt="@string/sn_commPrompt" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#e0e0e0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_blueName" />

        <Spinner
            android:id="@+id/sn_blueName"
            android:layout_width="fill_parent"
            android:layout_height="35dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#e0e0e0">

        <TextView
            android:id="@+id/tv_ipAddr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_ipAddr" />

        <EditText
            android:id="@+id/ed_ipAddr"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/tv_ipAddr"
            android:digits="0123456789."
            android:inputType="text"
            android:text="@string/ed_defaultIp" />

        <TextView
            android:id="@+id/tv_port"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/tv_ipAddr"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_port" />

        <EditText
            android:id="@+id/ed_port"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@id/tv_port"
            android:layout_toRightOf="@id/tv_port"
            android:inputType="number"
            android:text="@string/ed_defaultPort" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#e0e0e0">

        <TextView
            android:id="@+id/tv_comPath"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_comPath" />

        <Spinner
            android:id="@+id/sn_comName"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@id/tv_comPath"
            android:layout_toRightOf="@id/tv_comPath" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_connect"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_connect" />

        <Button
            android:id="@+id/btn_disconnect"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_disconnect" />
    </LinearLayout>

</LinearLayout>