<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:id="@+id/tv_inventoryUid"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:gravity="center_vertical|center"
        android:text="@string/tv_uid" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/tv_inventoryTagType"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical|center"
        android:text="@string/tv_tagType" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/tv_inventoryCnt"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center"
        android:text="@string/tv_inventoryCnt" />

</LinearLayout>